# davis-wilson-map

./: .gitignore  BACKENDS.md  README.md  SPEC.md  modal_app.py  pyproject.toml
analysis/: __init__.py  analyze_universality.py  clustering.py  davis_wilson.py  deep_geometry.py  heat_kernel.py  poincare_validation.py  tda.py  unified_heat_kernel.py  visualization.py  visualize_ns.py  visualize_pnp.py
experiments/: ape_smearing_enhancement.py  beta_scaling.py  gap_formation_3d.py
journal/: entry_001.md  entry_002.md  entry_003.md  entry_004.md  entry_005.md  entry_006.md  entry_007.md  entry_008.md  entry_009.md  entry_010.md  entry_011.md
lattice/: __init__.py  backends.py  gauge_config.py  skeleton.py  su3.py  topological.py  wilson_loops.py
results/: gap_formation_results.json
results/bsd/: bsd_001_data.npz
results/navier_stokes/: ns_003_data.npz
results/p_vs_np/: pnp_004_data.npz
results/poincare/: pc_001_data.npz
tests/: __init__.py  test_analysis.py  test_integration.py  test_su3.py
theory/: README.md
validation/: millennium_validation_plan.md
validation/bsd/: bsd_001_phase_transition.py  bsd_001_rank_prediction.py
validation/hodge/: hc_006_cpn_diamond.py
validation/navier_stokes/: ns_003_kolmogorov.py  ns_003_simple.py
validation/p_vs_np/: pnp_004_phase_transition.py
validation/poincare/: pc_001_formal_equivalence.py
validation/riemann/: rh_003_gue_statistics.py
