[project]
name = "davis-wilson-lattice"
version = "0.1.0"
description = "Empirical test of the Davis-Wilson mass gap framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Bee Rosa Davis", email = "bee_davis@alumni.brown.edu"}
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "numba>=0.57",
    "h5py>=3.8",
    "umap-learn>=0.5",
    "hdbscan>=0.8",
    "scikit-learn>=1.2",
    "matplotlib>=3.7",
    "plotly>=5.14",
    "ripser>=0.6",
    "persim>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.0.270",
    "mypy>=1.3",
]
modal = [
    "modal>=0.50",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=lattice --cov=analysis"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
